In Blazor Server template, show login UI on small screens too. Fixes #13003

--- a/src/Components/Blazor/Templates/src/content/BlazorWasm-CSharp/Client/wwwroot/css/site.css
+++ b/src/Components/Blazor/Templates/src/content/BlazorWasm-CSharp/Client/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -36,9 +36,15 @@ app {
         justify-content: flex-end;
     }
 
-        .main .top-row > a {
+        .main .top-row > a, .main .top-row .btn-link {
+            white-space: nowrap;
             margin-left: 1.5rem;
         }
+
+.main .top-row a:first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
@@ -131,8 +137,16 @@ app {
 }
 
 @media (max-width: 767.98px) {
-    .main .top-row {
+    .main .top-row:not(.auth) {
         display: none;
+    }
+
+    .main .top-row.auth {
+        justify-content: space-between;
+    }
+
+    .main .top-row a, .main .top-row .btn-link {
+        margin-left: 0;
     }
 }
 
